Replaced margin-bottom with line-height to fix spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ h2 {
 
 section > p {
     font-size: .85rem;
-    margin-bottom: 0;
+    line-height: 0;
     font-family: "Open Sans";
 }
 
